--- a/app/categories.html
+++ b/app/categories.html
@@ -27,6 +27,12 @@
             {% for n in [{img:'Office_Automation_Provision', title:'Office Automation Provision'}, {img:'Assets_Movement_Request', title:'Assets Movement Request'}, {img:'Assets_Objection_Request', title:'Assets Objection Request'}, {img:'Assets_Disposal', title:'Assets Disposal'}, {img:'Office_Automation_Provision', title:'Office Automation Provision'}, {img:'Assets_Movement_Request', title:'Assets Movement Request'}, {img:'Assets_Objection_Request', title:'Assets Objection Request'}, {img:'Assets_Disposal', title:'Assets Disposal'}] %}
                 <div class="col-xs-6 col-sm-4 col-md-5ths">
                     <div class="block border-primary category-box">
+                                
+                        <!-- Info -->
+                        <span class="block-info" data-toggle="tooltip" data-placement="top" title="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam">
+                            <img src="images/icons/info.svg" alt="">
+                        </span>
+                        
                         <div class="title-blcok">
                             <div class="img">
                                 <a href="category.html"><img src="images/icons/{{ n.img }}.svg" alt=""></a>
