--- a/app/approvals.html
+++ b/app/approvals.html
@@ -241,10 +241,10 @@
             <div class="date">2016/12/20 12:43pm</div>
             <div class="clearfix"></div>
             
-            <form class="send-comment clearfix">
+            <!-- <form class="send-comment clearfix">
                 <input type="text" class="comment-input" placeholder="Type your comments here">
                 <button type="submit" class="submit-comment">Send</button>
-            </form>
+            </form> -->
 
             <table class="table table-striped table-stc-details toggle-table">
                 <tr>
