--- a/app/category2.html
+++ b/app/category2.html
@@ -31,7 +31,7 @@
                 <div class="block border-primary category-box">
                     <div class="title-blcok">
                         <div class="img">
-                            <img src="images/icons/Iaas.svg" alt="">
+                            <img src="http://www.maxsys.sa/lab/stc/icons/images/Iaas.svg" alt="">
                         </div>
                         <h1>IaaS</h1>
                     </div>
@@ -53,7 +53,7 @@
                                 </span>
 
                                 <div class="img">
-                                    <img src="images/icons/{{ i.icon }}.svg" alt="">
+                                    <img src="http://www.maxsys.sa/lab/stc/icons/images/{{ i.icon }}.svg" alt="">
                                 </div>
                                 <h2>{{ i.title }}</h2>
 
