--- a/app/category3.html
+++ b/app/category3.html
@@ -10,7 +10,7 @@
         <li>
             <a href="index.html"><img src="images/bc_home.png" alt=""></a>
         </li>
-        <li><a href="categories3.html">IT Security & Information Protection</a></li>
+        <li><a href="categories3.html">IT Security</a></li>
         <li class="active">Security Change Request (SCR)</li>
     </ol>
 </div>
@@ -31,7 +31,7 @@
                 <div class="block border-primary category-box">
                     <div class="title-blcok">
                         <div class="img">
-                            <img src="images/icons/Security_Change_Request_SCR.svg" alt="">
+                            <img src="http://www.maxsys.sa/lab/stc/icons/images/Security_Change_Request_SCR.svg" alt="">
                         </div>
                         <h1>Security Change Request (SCR)</h1>
                     </div>
@@ -53,7 +53,7 @@
                                 </span>
 
                                 <div class="img">
-                                    <img src="images/icons/{{ i.icon }}.svg" alt="">
+                                    <img src="http://www.maxsys.sa/lab/stc/icons/images/{{ i.icon }}.svg" alt="">
                                 </div>
                                 <h2>{{ i.title }}</h2>
 
