--- a/app/sub-category.html
+++ b/app/sub-category.html
@@ -11,7 +11,8 @@
             <a href="index.html"><img src="images/bc_home.png" alt=""></a>
         </li>
         <li><a href="categories.html">Desktop Computers & Mobile Devices</a></li>
-        <li class="active">Office Automation Provision</li>
+        <li><a href="sub-categories.html">Office Automation Provision</a></li>
+        <li class="active">Personal Assets Provision</li>
     </ol>
 </div>
 
@@ -31,9 +32,9 @@
                 <div class="block border-primary category-box">
                     <div class="title-blcok">
                         <div class="img">
-                            <img src="http://www.maxsys.sa/lab/stc/icons/images/Office_Automation_Provision.svg" alt="">
+                            <img src="http://www.maxsys.sa/lab/stc/icons/images/Personal_Assets_Provision.svg" alt="">
                         </div>
-                        <h1>Office Automation Provision</h1>
+                        <h1>Personal Assets Provision</h1>
                     </div>
                 </div>
             </div>
@@ -42,7 +43,7 @@
             <div class="col-xs-12 col-md-9">
                 <div class="row row-eq-height">
                     
-                    {% for i in [{title: 'Personal Assets Provision', icon: 'Personal_Assets_Provision'}, {title: 'Adminstrative Assets Provision', icon: 'Adminstrative_Assets_Provision'}, {title: 'Customers Sales Offices Assets Provision', icon: 'Customers_Sales_Offices_Assets_Provision'}, {title: 'Customers Call Centers Assets Provision', icon: 'Customers_Call_Centers_Assets_Provision'}] %}
+                    {% for i in [{title: 'CPU', icon: 'CPU'}, {title: 'Laptop', icon: 'Laptop'}, {title: 'PC Monitor', icon: 'PC_Monitor'}, {title: 'All In One personal', icon: 'All_In_One_personal'}, {title: 'Cisco Monitor', icon: 'Cisco _Monitor'}, {title: 'All In One PC', icon: 'All_In_One_PC'}] %}
                         <div class="col-xs-6 col-sm-3">
                             <!-- box -->
                             <div class="block border-yellow product-box">
